<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_signIn_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    tools:ignore="HardcodedText">


    <!-- your  logo  -->

    <ImageView
        android:id="@+id/id_logo_imageView"
        android:layout_width="143dp"
        android:layout_height="113dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <!-- Sign in Linear Layout  -->

    <LinearLayout
        android:id="@+id/id_signin_lL"
        android:layout_width="match_parent"
        android:layout_height="324dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_Email_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@null"
            android:textColorHint="@color/textcolor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableLeft="@drawable/ic_profile_icon"
                android:drawablePadding="15dp"
                android:hint="@string/email"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textSize="16sp"
                tools:ignore="ContentDescription,RtlHardcoded" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/id_view_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_password_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="23dp"
            android:background="@null"
            android:textColorHint="@color/textcolor">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/ic_password_lock"
                android:drawableLeft="@drawable/ic_password_lock"
                android:drawablePadding="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textSize="16sp"
                tools:ignore="ContentDescription" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/id_view_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_view" />

        <!--   Sign in Button  -->

        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Forgot Password?"
            android:textColor="@color/black"
            android:textSize="15dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn_btn"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_rounded"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/black" />


        <!--   Sign Up Linear Layout   -->

        <LinearLayout
            android:id="@+id/id_signUp_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_signUpText_Textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/textcolor" />

            <TextView
                android:id="@+id/signUpClick"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:text="@string/sign_up"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>



    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".Login">-->
<!--    -->

<!--    <TextView-->
<!--        android:id="@+id/textView6"-->
<!--        android:layout_width="183dp"-->
<!--        android:layout_height="61dp"-->
<!--        android:text="sign in continue"-->
<!--        android:textSize="22sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.19" />-->


<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="257dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:text="Email"-->
<!--        android:textSize="15sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.38"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.32999998" />-->

<!--    <EditText-->
<!--        android:id="@+id/email"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:hint="Enter your email"-->
<!--        android:textSize="20sp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.41"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.37" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="267dp"-->
<!--        android:layout_height="28dp"-->
<!--        android:text="@string/password"-->
<!--        android:textSize="15sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.38"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.48000002" />-->


<!--    <EditText-->
<!--        android:id="@+id/password"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:hint=" password"-->
<!--        android:password="true"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.41"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.53" />-->


<!--    <Button-->
<!--        android:id="@+id/loginBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/login"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.65999997" />-->


<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.86">-->

<!--        <TextView-->
<!--            android:id="@+id/textView7"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="100dp"-->
<!--            android:text="@string/new_member" />-->

<!--        <Button-->
<!--            android:id="@+id/createAccountBtn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="6dp"-->
<!--            android:layout_marginBottom="27dp"-->
<!--            android:text="@string/create_account" />-->


<!--    </LinearLayout>-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
